--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </article>
 
             <hr> <article>
-                <h3>Consultoría Digital</h3>
+                <h3>Consultoría Digital y Analisis</h3>
                 <figure>
                     <img src="https://media.istockphoto.com/id/943067460/es/foto/hombre-especialista-tiene-laptop-y-discute-trabajo-con-servidor-femenino-t%C3%A9cnico-est%C3%A1-parado-en.jpg?s=612x612&w=0&k=20&c=qQbl9en4TWCdGfFWS8kW-eUZWVkgJ2HWV9rnwz8ZxqI=" alt="Dos personas en una mesa discutiendo, representa consultoría digital.">
                     <figcaption>Asesoramiento experto para tu estrategia online.</figcaption>
