--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <ul>
                 <li><a href="https://blakecassidy.github.io/Sitio_Web_Index/">Inicio</a></li>
                 <li><a href="https://blakecassidy.github.io/Sitio_Web_Productos/">Productos</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="sobre-mi.html">Sobre Mí</a></li>
-                <li><a href="etiquetas.html">Etiquetas Semánticas</a></li>
-                <li><a href="galeria.html">Galería</a></li>
+                <li><a href="https://blakecassidy.github.io/Sitio_Web_Blog/">Blog</a></li>
+                <li><a href="">Contacto</a></li>
+                <li><a href="">Sobre Mí</a></li>
+                <li><a href="">Etiquetas Semánticas</a></li>
+                <li><a href="">Galería</a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +24,7 @@
     <main>
         <section>
             <h2>Descubre lo que tenemos para ti</h2>
-            <p>Explora nuestra selección de productos y servicios pensados para satisfacer tus necesidades. ¡Encuentra lo que buscas aquí!</p>
+            <p>Explora nuestra  selección de productos y servicios pensados para satisfacer tus necesidades. ¡Encuentra lo que buscas aquí!</p>
 
             <article>
                 <h3>Diseño Web Personalizado</h3>
